WIP Game Conversion

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <h1>Animal Crossing Color Picker</h1>
     <div id="interface">
         <div id="picker"></div>
-        <div>
+        <div id="color-result">
             <h2>Colors</h2>
             <ul>
-                <li>Hue: <span id="hue"></span></li>
-                <li>Vividness: <span id="viv"></span></li>
-                <li>Brightness: <span id="bri"></span></li>
+                <li>Hue: <span id="hue-live"></span> -> ingame: <span id="hue-ing"></span></li>
+                <li>Vividness: <span id="viv-live"></span> -> ingame: <span id="viv-ing"></span></li>
+                <li>Brightness: <span id="bri-live"></span> -> ingame: <span id="bri-ing"></span></li>
             </ul>
         </div>
     </div>
