--- a/index.html
+++ b/index.html
@@ -18,11 +18,18 @@
         </div>
 
         <div id="color-result">
-            <h2>Colors</h2>
+            <h2>Colors you picked</h2>
             <ul>
-                <li>Hue: <span id="hue-live"></span> -> ingame: <span id="hue-ing"></span></li>
-                <li>Vividness (Saturation): <span id="viv-live"></span> -> ingame: <span id="viv-ing"></span></li>
-                <li>Brightness: <span id="bri-live"></span> -> ingame: <span id="bri-ing"></span></li>
+                <li>Hue: <span id="hue-live"></span></li>
+                <li>Saturation: <span id="viv-live"></span></li>
+                <li>Lightness: <span id="bri-live"></span></li>
+            </ul>
+
+            <h2>In-game Colors</h2>
+            <ul>
+                <li>Hue: <span id="hue-ing"></span></li>
+                <li>Vividness: <span id="viv-ing"></span></li>
+                <li>Brightness: <span id="bri-ing"></span></li>
             </ul>
         </div>
     </div>
