--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <script src="https://cdn.jsdelivr.net/npm/@jaames/iro@5"></script>
     <link rel="stylesheet" href="style.css">
     <title>Animal Crossing Color Picker</title>
+
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Animal Crossing Color Picker">
+    <meta property="og:description" content="Convert any color into a palette color for Animal Crossing: New Horizons">
+    <meta property="og:url" content="https://acpicker.netlify.com/">
+    <meta name="theme-color" content="#29b514">
+
 </head>
 
 <body>
